# openai-chess

./: .gitignore  main.py  makefile  pyproject.toml
chessapp/: app.py  chess.py  chess_ai.py  jinja.py  utils.py
templates/: chess.html  index.html
